--- a/lab2/package.json
+++ b/lab2/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@shower/shower",
+  "name": "@amir/shower",
   "description": "Shower HTML presentation engine",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": {
     "name": "Amirjon Bobojonov"
   },
